# AI_Advent_Challenge_public

./: .gitignore  README.md  pyproject.toml
01_LLM_REST_API/: .env.example  01.webm
02_ANSWER_FORMAT/: .env.example
03_REASONING/: day3_results_20260607_204013.md
04_TEMPERATURE/: TEMPERATURE.py  day4_temperature_results_20260607_215421.md
06_FIRST_AGENT/: .env.example  06.webm
06_FIRST_AGENT/ai_advent_agent/: __init__.py  cli.py  config.py
07_SAVE_CONTEXT/: .env.example
07_SAVE_CONTEXT/.agent_context/: messages.json
07_SAVE_CONTEXT/ai_advent_agent/: __init__.py  agent.py
08_TOKENS_ACCOUNTING/: .env.example  pyproject.toml  skills-all.md
08_TOKENS_ACCOUNTING/.agent_context/: messages.json
08_TOKENS_ACCOUNTING/ai_advent_agent/: cli.py  token_counter.py
weeks/: README.md
weeks/week-01/: README.md
weeks/week-01/day-01-llm-rest-api/: README.md
weeks/week-01/day-02-answer-format/: README.md
weeks/week-01/day-03-reasoning/: README.md
weeks/week-01/day-04-temperature/: README.md
weeks/week-01/day-05-model-versions/: README.md
weeks/week-02/: README.md
weeks/week-02/day-06-first-agent/: README.md
weeks/week-02/day-07-save-context/: README.md
weeks/week-02/day-08-tokens-accounting/: README.md
weeks/week-02/day-09-context-management-summary/: README.md
weeks/week-02/day-09-context-management-summary/snapshot/: .env.example  pyproject.toml
weeks/week-02/day-09-context-management-summary/snapshot/ai_advent_agent/: agent.py  cli.py  config.py  scenarios.py  token_counter.py  token_report.py
weeks/week-02/day-10-context-management-strategies/: README.md
weeks/week-02/day-10-context-management-strategies/snapshot/: .env.example  pyproject.toml
weeks/week-02/day-10-context-management-strategies/snapshot/ai_advent_agent/: agent.py  cli.py  config.py  scenarios.py
weeks/week-03/: README.md
weeks/week-03/day-11-memory-layers/snapshot/: .env.example  pyproject.toml
weeks/week-03/day-11-memory-layers/snapshot/ai_advent_agent/: __init__.py  agent.py  cli.py  commands.py  config.py  memory_layers.py  scenarios.py  token_counter.py  token_report.py
weeks/week-03/day-11-memory-layers/snapshot/ai_advent_agent/commands/: __init__.py  branch.py  builders.py  completer.py  config.py  context.py  core.py  file.py  help.py  memory.py  registry.py  session.py  status.py  storage.py
weeks/week-03/day-11-memory-layers/snapshot/tests/: test_commands.py  test_context_strategies.py  test_memory_layers.py
weeks/week-03/day-12-assistant-personalization/snapshot/: .env.example  pyproject.toml
weeks/week-03/day-12-assistant-personalization/snapshot/ai_advent_agent/: __init__.py  agent.py  cli.py  config.py  context_management.py  memory_layers.py  scenarios.py  token_report.py
weeks/week-03/day-12-assistant-personalization/snapshot/ai_advent_agent/commands/: __init__.py  branch.py  builders.py  completer.py  context.py  core.py  status.py  storage.py
weeks/week-03/day-12-assistant-personalization/snapshot/tests/: test_commands.py  test_summary_agent.py
weeks/week-03/day-13-task-state-machine/snapshot/: .env.example  pyproject.toml
weeks/week-03/day-13-task-state-machine/snapshot/ai_advent_agent/: __init__.py  agent.py  cli.py  config.py  env.py  scenarios.py  task_state.py  token_report.py
weeks/week-03/day-13-task-state-machine/snapshot/ai_advent_agent/commands/: builders.py  context.py  status.py
weeks/week-03/day-13-task-state-machine/snapshot/tests/: test_commands.py  test_memory_layers.py  test_task_state.py
weeks/week-03/day-15-controlled-state-transitions/snapshot/: .env.example  pyproject.toml
weeks/week-03/day-15-controlled-state-transitions/snapshot/ai_advent_agent/: __init__.py  agent.py  cli.py  llm_client.py  scenarios.py  storage.py  task_state.py  token_report.py  user_profile.py
weeks/week-03/day-15-controlled-state-transitions/snapshot/ai_advent_agent/commands/: builders.py  context.py  help.py  invariant.py  status.py  storage.py  task.py
weeks/week-03/day-15-controlled-state-transitions/snapshot/tests/: test_commands.py  test_invariants.py  test_task_state.py  test_user_profile.py
weeks/week-04/: README.md
weeks/week-04/day-17-first-mcp-tool/snapshot/: .env.example  README.md  pyproject.toml
weeks/week-04/day-17-first-mcp-tool/snapshot/src/ai_advent_agent/: __init__.py  mcp_mock_api.py  mcp_tool_client.py  mcp_tool_server.py  scenarios.py
weeks/week-04/day-17-first-mcp-tool/snapshot/tests/: test_mcp_tool_demo.py
weeks/week-04/day-19-mcp-tool-composition/snapshot/: README.md  pyproject.toml
weeks/week-04/day-19-mcp-tool-composition/snapshot/src/ai_advent_agent/: __init__.py  mcp_composition_client.py  mcp_composition_server.py  mcp_mock_api.py  mcp_tool_client.py  scenarios.py
weeks/week-04/day-19-mcp-tool-composition/snapshot/tests/: test_mcp_tool_composition.py
weeks/week-04/day-20-mcp-orchestration/snapshot/: README.md  pyproject.toml
weeks/week-04/day-20-mcp-orchestration/snapshot/src/ai_advent_agent/: __init__.py  config.py  mcp_orchestration_client.py  mcp_orchestration_knowledge.py  mcp_orchestration_planner.py  mcp_orchestration_report.py  mcp_orchestration_servers.py  mcp_orchestration_storage.py  mcp_orchestration_tracker.py  scenarios.py
weeks/week-04/day-20-mcp-orchestration/snapshot/tests/: test_mcp_orchestration.py
weeks/week-05/: README.md
weeks/week-05/day-21-document-indexing/snapshot/: pyproject.toml
weeks/week-05/day-21-document-indexing/snapshot/src/ai_advent_agent/: __init__.py  scenarios.py
weeks/week-05/day-21-document-indexing/snapshot/src/ai_advent_agent/rag/: __init__.py  chunking.py  search.py
weeks/week-05/day-21-document-indexing/snapshot/tests/: test_document_indexing.py
weeks/week-05/day-22-first-rag-query/snapshot/: README.md  pyproject.toml
weeks/week-05/day-22-first-rag-query/snapshot/src/ai_advent_agent/: __init__.py  scenarios.py
weeks/week-05/day-22-first-rag-query/snapshot/src/ai_advent_agent/rag/: __init__.py  embeddings.py  llm.py  prompts.py  qa.py
weeks/week-05/day-22-first-rag-query/snapshot/tests/: test_first_rag_query.py
(+240 files in other folders)
