[project]
name = "ai-advent-challenge-public"
version = "0.1.0"
description = "Публичный репозиторий для сдачи заданий AI Advent Challenge"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
