[project]
name = "day9-summary-agent"
version = "0.1.0"
description = "Day 9: summary-memory persistent-context LLM agent for AI Advent Challenge"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
day9-agent = "ai_advent_agent.cli:main"
day9-scenarios = "ai_advent_agent.scenarios:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_advent_agent"]
