[project]
name = "day10-context-strategies-agent"
version = "0.1.0"
description = "Day 10: context-management strategies LLM agent for AI Advent Challenge"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
day10-agent = "ai_advent_agent.cli:main"
day10-scenarios = "ai_advent_agent.scenarios:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_advent_agent"]
