[project]
name = "ai-advent-agent"
version = "0.1.0"
description = "Самодостаточный snapshot Day 20: multi-server MCP orchestration"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.28,<2",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
ai-advent-scenarios = "ai_advent_agent.scenarios:main"

[dependency-groups]
dev = ["pytest", "ruff", "ty"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ty]
