[project]
name = "ai-advent-day-22-snapshot"
version = "0.1.0"
description = "Самодостаточный snapshot Day 22: первый RAG-запрос"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ai_advent_agent"

[project.scripts]
ai-advent-scenarios = "ai_advent_agent.scenarios:main"

[dependency-groups]
dev = ["pytest", "ruff", "ty"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ty]
